// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Departments Page  2--Should fetch departments and filter departments 1`] = `
<DocumentFragment>
  <div
    class="top__bar"
  >
    <div
      class="top__bar--search"
    >
      <input
        class="top__bar--search-input"
        name="search"
        placeholder="Search here"
        type="text"
      />
      <div
        class="top__bar--search-icon"
      >
        <i
          class="fas fa-search"
        />
      </div>
    </div>
    <div
      class="top__bar--search-user"
    >
      <h5>
        Asiye
      </h5>
      <i
        class="fas fa-bell"
      />
      <img
        alt="User"
        src="mockImgUrl"
      />
      <button>
        Logout
      </button>
    </div>
  </div>
  <div
    class="mainWrapper"
  >
    <div
      class="headerWrapper"
    >
      <h2>
        DEPARTMENTS
      </h2>
      <hr />
    </div>
    <div
      class="container"
      role="departments-container"
    >
      <div
        class="department__wrapper"
        role="department"
      >
        <div
          class="department__button"
        >
          <div
            class="department__button--name"
          >
            Allergy & Immunology
          </div>
        </div>
        <div>
          <ul
            class="department__sub-wrapper"
          >
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Allergy
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Allergy & Immunology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Immunology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Immunopathology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Pediatric Allergy
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="department__wrapper"
        role="department"
      >
        <div
          class="department__button"
        >
          <div
            class="department__button--name"
          >
            Anesthesiology
          </div>
        </div>
        <div>
          <ul
            class="department__sub-wrapper"
          >
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Anesthesiology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Critical Care Anesthesiology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Critical Care Medicine
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Pain Management
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="department__wrapper"
        role="department"
      >
        <div
          class="department__button"
        >
          <div
            class="department__button--name"
          >
            Cardiology
          </div>
        </div>
        <div>
          <ul
            class="department__sub-wrapper"
          >
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Cardiovascular Disease
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Cardiovascular Surgery
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Interventional Cardiology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Immunopathology
              </a>
            </li>
            <li
              class="department__sub--item"
            >
              <a
                href="/"
              >
                Pediatric Cardiology
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Departments Page 1--Matches the DOM snapshot 1`] = `
<DocumentFragment>
  <div
    class="top__bar"
  >
    <div
      class="top__bar--search"
    >
      <input
        class="top__bar--search-input"
        name="search"
        placeholder="Search here"
        type="text"
      />
      <div
        class="top__bar--search-icon"
      >
        <i
          class="fas fa-search"
        />
      </div>
    </div>
    <div
      class="top__bar--search-user"
    >
      <h5>
        Asiye
      </h5>
      <i
        class="fas fa-bell"
      />
      <img
        alt="User"
        src="mockImgUrl"
      />
      <button>
        Logout
      </button>
    </div>
  </div>
  <div
    class="mainWrapper"
  >
    <div
      class="headerWrapper"
    >
      <h2>
        DEPARTMENTS
      </h2>
      <hr />
    </div>
    <div
      class="container"
      role="departments-container"
    >
      <p>
        Departments loading...
      </p>
    </div>
  </div>
</DocumentFragment>
`;
